--- a/Test/SASPlanetTests.Rio.dproj
+++ b/Test/SASPlanetTests.Rio.dproj
@@ -130,6 +130,7 @@
         <VerInfo_Locale>1033</VerInfo_Locale>
         <AppEnableRuntimeThemes>true</AppEnableRuntimeThemes>
         <BT_BuildType>Debug</BT_BuildType>
+        <DCC_DebugInfoInExe>true</DCC_DebugInfoInExe>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2_Win64)'!=''">
         <AppEnableRuntimeThemes>true</AppEnableRuntimeThemes>
@@ -1037,28 +1038,28 @@
         <DelphiCompile Include="$(MainSource)">
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
-        <DCCReference Include="u_WideStrings_Test.pas"/>
         <DCCReference Include="i_IGUIDInterfaceSet_Test.pas"/>
-        <DCCReference Include="u_GUIDSet_Test.pas"/>
         <DCCReference Include="i_IGUIDObjectSet_Test.pas"/>
-        <DCCReference Include="u_GUIDSetStatic_Test.pas"/>
-        <DCCReference Include="u_RegularExpressions_Test.pas"/>
-        <DCCReference Include="u_SASTestCase.pas"/>
-        <DCCReference Include="u_ProjectedSingleLine_Test.pas"/>
-        <DCCReference Include="u_VectorItmesFactorySimple_Test.pas"/>
-        <DCCReference Include="u_EnumDoublePointLine2Poly_Test.pas"/>
-        <DCCReference Include="u_EnumDoublePointFilterEqual_Test.pas"/>
-        <DCCReference Include="u_EnumDoublePointWithClip_Test.pas"/>
-        <DCCReference Include="u_EnumDoublePointClosePoly_Test.pas"/>
-        <DCCReference Include="u_HashCacheWithQueuesAbstract_Test.pas"/>
-        <DCCReference Include="u_PathConfig_Test.pas"/>
-        <DCCReference Include="u_Datum_Test.pas"/>
-        <DCCReference Include="u_GeometrySaveLoadWKB_Test.pas"/>
-        <DCCReference Include="u_CalcTilesInPolygon_Test.pas"/>
-        <DCCReference Include="u_MarkCategoryListToTree_Test.pas"/>
         <DCCReference Include="u_BitmapTileLibPng_Test.pas"/>
         <DCCReference Include="u_BitmapTileSaveLoadFactory_Test.pas"/>
+        <DCCReference Include="u_CalcTilesInPolygon_Test.pas"/>
+        <DCCReference Include="u_Datum_Test.pas"/>
+        <DCCReference Include="u_EnumDoublePointClosePoly_Test.pas"/>
+        <DCCReference Include="u_EnumDoublePointFilterEqual_Test.pas"/>
+        <DCCReference Include="u_EnumDoublePointLine2Poly_Test.pas"/>
+        <DCCReference Include="u_EnumDoublePointWithClip_Test.pas"/>
+        <DCCReference Include="u_GUIDSetStatic_Test.pas"/>
+        <DCCReference Include="u_GUIDSet_Test.pas"/>
+        <DCCReference Include="u_GeometrySaveLoadWKB_Test.pas"/>
+        <DCCReference Include="u_HashCacheWithQueuesAbstract_Test.pas"/>
+        <DCCReference Include="u_MarkCategoryListToTree_Test.pas"/>
         <DCCReference Include="u_PascalScriptUrlTemplate_Test.pas"/>
+        <DCCReference Include="u_PathConfig_Test.pas"/>
+        <DCCReference Include="u_ProjectedSingleLine_Test.pas"/>
+        <DCCReference Include="u_RegularExpressions_Test.pas"/>
+        <DCCReference Include="u_SASTestCase.pas"/>
+        <DCCReference Include="u_VectorItmesFactorySimple_Test.pas"/>
+        <DCCReference Include="u_WideStrings_Test.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
