--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -597,6 +597,7 @@
     <DCCReference Include="Src\MainForm\u_StickToGridGenShtab.pas" />
     <DCCReference Include="Src\MainForm\u_StickToGrids.pas" />
     <DCCReference Include="Src\MainForm\u_StickToGridTiles.pas" />
+    <DCCReference Include="Src\MainForm\u_TBXExtItems.pas" />
     <DCCReference Include="Src\MainForm\u_TBXSASTheme.pas" />
     <DCCReference Include="Src\MainForm\u_TBXSubmenuItemWithIndicator.pas" />
     <DCCReference Include="Src\MainForm\u_ViewPortState.pas" />
@@ -1121,6 +1122,7 @@
     <DCCReference Include="Src\PascalScript\u_PascalScriptMath.pas" />
     <DCCReference Include="Src\PascalScript\u_PascalScriptRegExpr.pas" />
     <DCCReference Include="Src\PascalScript\u_PascalScriptTypes.pas" />
+    <DCCReference Include="Src\PascalScript\u_PascalScriptUrlTemplate.pas" />
     <DCCReference Include="Src\PascalScript\u_PascalScriptUtils.pas" />
     <DCCReference Include="Src\PascalScript\u_PascalScriptWriteLn.pas" />
     <DCCReference Include="Src\PascalScript\u_PSExecEx.pas" />
@@ -1648,6 +1650,7 @@
     <DCCReference Include="Src\u_HashFunctionByImpl.pas" />
     <DCCReference Include="Src\u_HashFunctionWithCounter.pas" />
     <DCCReference Include="Src\u_HashInterfaceCache2Q.pas" />
+    <DCCReference Include="Src\u_HtmlDoc.pas" />
     <DCCReference Include="Src\u_HtmlToHintTextConverterStuped.pas" />
     <DCCReference Include="Src\u_ImportFromArcGIS.pas" />
     <DCCReference Include="Src\u_InterfaceQueue.pas" />
