--- a/SASPlanet.Rio.dproj
+++ b/SASPlanet.Rio.dproj
@@ -2681,6 +2681,8 @@
         <DCCReference Include="Src\u_ValueToStringConverterChangeable.pas"/>
         <DCCReference Include="Src\u_ValueToStringConverterConfig.pas"/>
         <DCCReference Include="Src\u_WindowPositionConfig.pas"/>
+        <DCCReference Include="Src\Routing\i_PathDetalizeConfig.pas"/>
+        <DCCReference Include="Src\Routing\u_PathDetalizeConfig.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
