--- a/SASPlanet.Rio.dproj
+++ b/SASPlanet.Rio.dproj
@@ -1203,6 +1203,7 @@
         <DCCReference Include="Src\CoordConvert\u_ProjectionTypeGELonLat.pas"/>
         <DCCReference Include="Src\CoordConvert\u_ProjectionTypeMercatorOnEllipsoid.pas"/>
         <DCCReference Include="Src\CoordConvert\u_ProjectionTypeMercatorOnSphere.pas"/>
+        <DCCReference Include="Src\CoordRepresentation\u_CoordRepresentation.pas"/>
         <DCCReference Include="Src\CoordRepresentation\i_CoordFromStringParser.pas"/>
         <DCCReference Include="Src\CoordRepresentation\i_CoordRepresentationConfig.pas"/>
         <DCCReference Include="Src\CoordRepresentation\i_CoordToStringConverter.pas"/>
@@ -2238,6 +2239,7 @@
         <DCCReference Include="Src\Routing\u_PathDetalizeConfig.pas"/>
         <DCCReference Include="Src\Routing\u_PathDetalizeProviderBase.pas"/>
         <DCCReference Include="Src\Routing\u_PathDetalizeProviderOSRM.pas"/>
+        <DCCReference Include="Src\Routing\u_PathDetalizeProviderOsmScout.pas"/>
         <DCCReference Include="Src\Routing\u_PathDetalizeProviderTreeEntity.pas"/>
         <DCCReference Include="Src\Routing\u_PathDetalizeProviderTreeSimple.pas"/>
         <DCCReference Include="Src\Routing\u_PathDetalizeProviderYourNavigation.pas"/>
@@ -2685,7 +2687,6 @@
         <DCCReference Include="Src\u_ValueToStringConverterChangeable.pas"/>
         <DCCReference Include="Src\u_ValueToStringConverterConfig.pas"/>
         <DCCReference Include="Src\u_WindowPositionConfig.pas"/>
-        <DCCReference Include="Src\Routing\u_PathDetalizeProviderOsmScout.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
