Библиотека поддержки часовых поясов сменила название и API

--- a/SASPlanet.Rio.dproj
+++ b/SASPlanet.Rio.dproj
@@ -1203,12 +1203,12 @@
         <DCCReference Include="Src\CoordConvert\u_ProjectionTypeGELonLat.pas"/>
         <DCCReference Include="Src\CoordConvert\u_ProjectionTypeMercatorOnEllipsoid.pas"/>
         <DCCReference Include="Src\CoordConvert\u_ProjectionTypeMercatorOnSphere.pas"/>
-        <DCCReference Include="Src\CoordRepresentation\u_CoordRepresentation.pas"/>
         <DCCReference Include="Src\CoordRepresentation\i_CoordFromStringParser.pas"/>
         <DCCReference Include="Src\CoordRepresentation\i_CoordRepresentationConfig.pas"/>
         <DCCReference Include="Src\CoordRepresentation\i_CoordToStringConverter.pas"/>
         <DCCReference Include="Src\CoordRepresentation\t_CoordRepresentation.pas"/>
         <DCCReference Include="Src\CoordRepresentation\u_CoordFromStringParser.pas"/>
+        <DCCReference Include="Src\CoordRepresentation\u_CoordRepresentation.pas"/>
         <DCCReference Include="Src\CoordRepresentation\u_CoordRepresentationConfig.pas"/>
         <DCCReference Include="Src\CoordRepresentation\u_CoordToStringConverter.pas"/>
         <DCCReference Include="Src\CoordRepresentation\u_CoordToStringConverterChangeable.pas"/>
@@ -2329,7 +2329,6 @@
         <DCCReference Include="Src\System\u_LanguageManager.pas"/>
         <DCCReference Include="Src\System\u_LanguagesEx.pas"/>
         <DCCReference Include="Src\System\u_SystemTimeProvider.pas"/>
-        <DCCReference Include="Src\System\u_TimeZoneInfo.pas"/>
         <DCCReference Include="Src\Terrain\External\u_ExternalTerrainAPI.pas"/>
         <DCCReference Include="Src\Terrain\External\u_ExternalTerrainsProvider.pas"/>
         <DCCReference Include="Src\Terrain\GoogleEarth\i_GoogleEarthTerrainTileStorage.pas"/>
@@ -2687,6 +2686,7 @@
         <DCCReference Include="Src\u_ValueToStringConverterChangeable.pas"/>
         <DCCReference Include="Src\u_ValueToStringConverterConfig.pas"/>
         <DCCReference Include="Src\u_WindowPositionConfig.pas"/>
+        <DCCReference Include="Src\TimeZone\u_TimeZoneInfo.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
