--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -1447,7 +1447,7 @@
     <DCCReference Include="Src\System\u_LanguageManager.pas" />
     <DCCReference Include="Src\System\u_LanguagesEx.pas" />
     <DCCReference Include="Src\System\u_SystemTimeProvider.pas" />
-    <DCCReference Include="Src\System\u_TimeZoneInfo.pas" />
+    <DCCReference Include="Src\TimeZone\u_TimeZoneInfo.pas" />
     <DCCReference Include="Src\Terrain\c_TerrainProvider.pas" />
     <DCCReference Include="Src\Terrain\c_TerrainProviderGUID.pas" />
     <DCCReference Include="Src\Terrain\External\u_ExternalTerrainAPI.pas" />
