--- a/SASPlanet.Rio.dproj
+++ b/SASPlanet.Rio.dproj
@@ -2000,12 +2000,14 @@
             <Form>frmPascalScriptIDE</Form>
         </DCCReference>
         <DCCReference Include="Src\PascalScript\i_PascalScriptGlobal.pas"/>
+        <DCCReference Include="Src\PascalScript\i_PascalScriptLogger.pas"/>
         <DCCReference Include="Src\PascalScript\t_PascalScript.pas"/>
         <DCCReference Include="Src\PascalScript\u_PSExecEx.pas"/>
         <DCCReference Include="Src\PascalScript\u_PSPascalCompilerEx.pas"/>
         <DCCReference Include="Src\PascalScript\u_PascalScriptBase64.pas"/>
         <DCCReference Include="Src\PascalScript\u_PascalScriptCompiler.pas"/>
         <DCCReference Include="Src\PascalScript\u_PascalScriptGlobal.pas"/>
+        <DCCReference Include="Src\PascalScript\u_PascalScriptLogger.pas"/>
         <DCCReference Include="Src\PascalScript\u_PascalScriptMath.pas"/>
         <DCCReference Include="Src\PascalScript\u_PascalScriptRegExpr.pas"/>
         <DCCReference Include="Src\PascalScript\u_PascalScriptTypes.pas"/>
@@ -2687,8 +2689,8 @@
         <DCCReference Include="Src\u_ValueToStringConverterChangeable.pas"/>
         <DCCReference Include="Src\u_ValueToStringConverterConfig.pas"/>
         <DCCReference Include="Src\u_WindowPositionConfig.pas"/>
-        <DCCReference Include="Src\PascalScript\i_PascalScriptLogger.pas"/>
-        <DCCReference Include="Src\PascalScript\u_PascalScriptLogger.pas"/>
+        <DCCReference Include="Src\PascalScript\i_PascalScriptTileCache.pas"/>
+        <DCCReference Include="Src\PascalScript\u_PascalScriptTileCache.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
