--- a/SASPlanet.Rio.dproj
+++ b/SASPlanet.Rio.dproj
@@ -2520,8 +2520,13 @@
         <DCCReference Include="Src\UpdateChecker\frm_UpdateChecker.pas">
             <Form>frmUpdateChecker</Form>
         </DCCReference>
-        <DCCReference Include="Src\UpdateChecker\i_UpdateDownloader.pas"/>
-        <DCCReference Include="Src\UpdateChecker\u_UpdateDownloader.pas"/>
+        <DCCReference Include="Src\UpdateChecker\i_UpdateProgress.pas"/>
+        <DCCReference Include="Src\UpdateChecker\t_UpdateChecker.pas"/>
+        <DCCReference Include="Src\UpdateChecker\u_UpdateChecker.pas"/>
+        <DCCReference Include="Src\UpdateChecker\u_UpdateCheckerFunc.pas"/>
+        <DCCReference Include="Src\UpdateChecker\u_UpdateCheckerThread.pas"/>
+        <DCCReference Include="Src\UpdateChecker\u_UpdateDownloaderThread.pas"/>
+        <DCCReference Include="Src\UpdateChecker\u_UpdateProgress.pas"/>
         <DCCReference Include="Src\UrlByCoord\i_UrlByCoordProvider.pas"/>
         <DCCReference Include="Src\UrlByCoord\u_UrlByCoordProvider.pas"/>
         <DCCReference Include="Src\VectorLoaders\i_XmlVectorObjects.pas"/>
