--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -75,7 +75,7 @@
     <DCCReference Include="Src\Basic\i_FileNameIterator.pas" />
     <DCCReference Include="Src\Basic\i_GUIDListStatic.pas" />
     <DCCReference Include="Src\Basic\i_GUIDSet.pas" />
-    <DCCReference Include="Src\Basic\i_HashFunctionImpl.pas" />
+    <DCCReference Include="Src\HashFunction\i_HashFunctionImpl.pas" />
     <DCCReference Include="Src\Basic\i_IDList.pas" />
     <DCCReference Include="Src\Basic\i_InterfaceListSimple.pas" />
     <DCCReference Include="Src\Basic\i_InterfaceListStatic.pas" />
@@ -111,8 +111,8 @@
     <DCCReference Include="Src\Basic\u_GUIDObjectSet.pas" />
     <DCCReference Include="Src\Basic\u_GUIDSet.pas" />
     <DCCReference Include="Src\Basic\u_GUIDTool.pas" />
-    <DCCReference Include="Src\Basic\u_HashFunctionCityHash.pas" />
-    <DCCReference Include="Src\Basic\u_HashFunctionCRC64.pas" />
+    <DCCReference Include="Src\HashFunction\u_HashFunctionCityHash.pas" />
+    <DCCReference Include="Src\HashFunction\u_HashFunctionCRC64.pas" />
     <DCCReference Include="Src\Basic\u_IDInterfaceList.pas" />
     <DCCReference Include="Src\Basic\u_IdListBase.pas" />
     <DCCReference Include="Src\Basic\u_InterfacedThread.pas" />
@@ -437,7 +437,7 @@
     <DCCReference Include="Src\i_GlobalAppConfig.pas" />
     <DCCReference Include="Src\i_GlobalConfig.pas" />
     <DCCReference Include="Src\i_GlobalViewMainConfig.pas" />
-    <DCCReference Include="Src\i_HashFunction.pas" />
+    <DCCReference Include="Src\HashFunction\i_HashFunction.pas" />
     <DCCReference Include="Src\i_HashInterfaceCache.pas" />
     <DCCReference Include="Src\i_HtmlToHintTextConverter.pas" />
     <DCCReference Include="Src\i_InterfaceQueue.pas" />
@@ -1667,8 +1667,8 @@
     <DCCReference Include="Src\u_GlobalConfig.pas" />
     <DCCReference Include="Src\u_GlobalState.pas" />
     <DCCReference Include="Src\u_GlobalViewMainConfig.pas" />
-    <DCCReference Include="Src\u_HashFunctionByImpl.pas" />
-    <DCCReference Include="Src\u_HashFunctionWithCounter.pas" />
+    <DCCReference Include="Src\HashFunction\u_HashFunctionByImpl.pas" />
+    <DCCReference Include="Src\HashFunction\u_HashFunctionWithCounter.pas" />
     <DCCReference Include="Src\u_HashInterfaceCache2Q.pas" />
     <DCCReference Include="Src\u_HtmlDoc.pas" />
     <DCCReference Include="Src\u_HtmlToHintTextConverterStuped.pas" />
