--- a/SASPlanet.104.dproj
+++ b/SASPlanet.104.dproj
@@ -2270,6 +2270,7 @@
         <DCCReference Include="Src\RegionProcess\Combine\u_BitmapMapCombinerKMZ.pas"/>
         <DCCReference Include="Src\RegionProcess\Combine\u_BitmapMapCombinerPNG.pas"/>
         <DCCReference Include="Src\RegionProcess\Combine\u_BitmapMapCombinerRAW.pas"/>
+        <DCCReference Include="Src\RegionProcess\Combine\u_BmpWriter.pas"/>
         <DCCReference Include="Src\RegionProcess\Combine\u_CalcWFileParams.pas"/>
         <DCCReference Include="Src\RegionProcess\Combine\u_ECWJP2Write.pas"/>
         <DCCReference Include="Src\RegionProcess\Combine\u_ImageLineProvider.pas"/>
