--- a/SASPlanet.XE2.dproj
+++ b/SASPlanet.XE2.dproj
@@ -179,7 +179,6 @@
 			<DCCReference Include="Src\Basic\i_FileNameIterator.pas"/>
 			<DCCReference Include="Src\Basic\i_GUIDListStatic.pas"/>
 			<DCCReference Include="Src\Basic\i_GUIDSet.pas"/>
-			<DCCReference Include="Src\HashFunction\i_HashFunctionImpl.pas"/>
 			<DCCReference Include="Src\Basic\i_IDList.pas"/>
 			<DCCReference Include="Src\Basic\i_InterfaceListSimple.pas"/>
 			<DCCReference Include="Src\Basic\i_InterfaceListStatic.pas"/>
@@ -215,8 +214,6 @@
 			<DCCReference Include="Src\Basic\u_GUIDObjectSet.pas"/>
 			<DCCReference Include="Src\Basic\u_GUIDSet.pas"/>
 			<DCCReference Include="Src\Basic\u_GUIDTool.pas"/>
-			<DCCReference Include="Src\HashFunction\u_HashFunctionCRC64.pas"/>
-			<DCCReference Include="Src\HashFunction\u_HashFunctionCityHash.pas"/>
 			<DCCReference Include="Src\Basic\u_IDInterfaceList.pas"/>
 			<DCCReference Include="Src\Basic\u_IdListBase.pas"/>
 			<DCCReference Include="Src\Basic\u_InterfaceListSimple.pas"/>
@@ -389,7 +386,7 @@
 			<DCCReference Include="Src\CoordConvert\u_ProjectionSetSimple.pas"/>
 			<DCCReference Include="Src\CoordConvert\u_ProjectionTypeBase.pas"/>
 			<DCCReference Include="Src\CoordConvert\u_ProjectionTypeFactorySimple.pas"/>
-			<DCCReference Include="Src\CoordConvert\u_ProjectionTypeGELonLat.pas"/>
+			<DCCReference Include="Src\CoordConvert\u_ProjectionTypeGeographic.pas"/>
 			<DCCReference Include="Src\CoordConvert\u_ProjectionTypeMercatorOnEllipsoid.pas"/>
 			<DCCReference Include="Src\CoordConvert\u_ProjectionTypeMercatorOnSphere.pas"/>
 			<DCCReference Include="Src\CoordRepresentation\i_CoordFromStringParser.pas"/>
@@ -397,6 +394,7 @@
 			<DCCReference Include="Src\CoordRepresentation\i_CoordToStringConverter.pas"/>
 			<DCCReference Include="Src\CoordRepresentation\t_CoordRepresentation.pas"/>
 			<DCCReference Include="Src\CoordRepresentation\u_CoordFromStringParser.pas"/>
+			<DCCReference Include="Src\CoordRepresentation\u_CoordRepresentation.pas"/>
 			<DCCReference Include="Src\CoordRepresentation\u_CoordRepresentationConfig.pas"/>
 			<DCCReference Include="Src\CoordRepresentation\u_CoordToStringConverter.pas"/>
 			<DCCReference Include="Src\CoordRepresentation\u_CoordToStringConverterChangeable.pas"/>
@@ -442,6 +440,7 @@
 			<DCCReference Include="Src\GeoCalc\u_PolygonAreaCalculator.pas"/>
 			<DCCReference Include="Src\GeoCoder\c_GeoCoderGUIDSimple.pas"/>
 			<DCCReference Include="Src\GeoCoder\i_GeoCoder.pas"/>
+			<DCCReference Include="Src\GeoCoder\i_GeoCoderConfig.pas"/>
 			<DCCReference Include="Src\GeoCoder\i_GeoCoderList.pas"/>
 			<DCCReference Include="Src\GeoCoder\u_GeoCodePlacemark.pas"/>
 			<DCCReference Include="Src\GeoCoder\u_GeoCodeResult.pas"/>
@@ -461,6 +460,7 @@
 			<DCCReference Include="Src\GeoCoder\u_GeoCoderByURL.pas"/>
 			<DCCReference Include="Src\GeoCoder\u_GeoCoderByWikimapia.pas"/>
 			<DCCReference Include="Src\GeoCoder\u_GeoCoderByYandex.pas"/>
+			<DCCReference Include="Src\GeoCoder\u_GeoCoderConfig.pas"/>
 			<DCCReference Include="Src\GeoCoder\u_GeoCoderListBase.pas"/>
 			<DCCReference Include="Src\GeoCoder\u_GeoCoderListEntity.pas"/>
 			<DCCReference Include="Src\GeoCoder\u_GeoCoderListSimple.pas"/>
@@ -506,6 +506,12 @@
 			<DCCReference Include="Src\Geometry\u_LonLatRect.pas"/>
 			<DCCReference Include="Src\Geometry\u_LonLatRectByPoint.pas"/>
 			<DCCReference Include="Src\Geometry\u_ProjectedCalc.pas"/>
+			<DCCReference Include="Src\HashFunction\i_HashFunction.pas"/>
+			<DCCReference Include="Src\HashFunction\i_HashFunctionImpl.pas"/>
+			<DCCReference Include="Src\HashFunction\u_HashFunctionByImpl.pas"/>
+			<DCCReference Include="Src\HashFunction\u_HashFunctionCRC64.pas"/>
+			<DCCReference Include="Src\HashFunction\u_HashFunctionCityHash.pas"/>
+			<DCCReference Include="Src\HashFunction\u_HashFunctionWithCounter.pas"/>
 			<DCCReference Include="Src\ImageResampler\c_ImageResampler.pas"/>
 			<DCCReference Include="Src\ImageResampler\i_ImageResamplerConfig.pas"/>
 			<DCCReference Include="Src\ImageResampler\i_ImageResamplerFactory.pas"/>
@@ -667,6 +673,7 @@
 			<DCCReference Include="Src\MainForm\u_StickToGridGenShtab.pas"/>
 			<DCCReference Include="Src\MainForm\u_StickToGridTiles.pas"/>
 			<DCCReference Include="Src\MainForm\u_StickToGrids.pas"/>
+			<DCCReference Include="Src\MainForm\u_TBXExtItems.pas"/>
 			<DCCReference Include="Src\MainForm\u_TBXSASTheme.pas"/>
 			<DCCReference Include="Src\MainForm\u_TBXSubmenuItemWithIndicator.pas"/>
 			<DCCReference Include="Src\MainForm\u_ViewPortState.pas"/>
@@ -1185,15 +1192,20 @@
 				<Form>frmPascalScriptIDE</Form>
 			</DCCReference>
 			<DCCReference Include="Src\PascalScript\i_PascalScriptGlobal.pas"/>
+			<DCCReference Include="Src\PascalScript\i_PascalScriptLogger.pas"/>
+			<DCCReference Include="Src\PascalScript\i_PascalScriptTileCache.pas"/>
 			<DCCReference Include="Src\PascalScript\t_PascalScript.pas"/>
 			<DCCReference Include="Src\PascalScript\u_PSExecEx.pas"/>
 			<DCCReference Include="Src\PascalScript\u_PSPascalCompilerEx.pas"/>
 			<DCCReference Include="Src\PascalScript\u_PascalScriptBase64.pas"/>
 			<DCCReference Include="Src\PascalScript\u_PascalScriptCompiler.pas"/>
 			<DCCReference Include="Src\PascalScript\u_PascalScriptGlobal.pas"/>
+			<DCCReference Include="Src\PascalScript\u_PascalScriptLogger.pas"/>
 			<DCCReference Include="Src\PascalScript\u_PascalScriptMath.pas"/>
 			<DCCReference Include="Src\PascalScript\u_PascalScriptRegExpr.pas"/>
+			<DCCReference Include="Src\PascalScript\u_PascalScriptTileCache.pas"/>
 			<DCCReference Include="Src\PascalScript\u_PascalScriptTypes.pas"/>
+			<DCCReference Include="Src\PascalScript\u_PascalScriptUrlTemplate.pas"/>
 			<DCCReference Include="Src\PascalScript\u_PascalScriptUtils.pas"/>
 			<DCCReference Include="Src\PascalScript\u_PascalScriptWriteLn.pas"/>
 			<DCCReference Include="Src\Performance\i_InternalPerformanceCounter.pas"/>
@@ -1238,6 +1250,7 @@
 			<DCCReference Include="Src\RegionProcess\Combine\u_BitmapMapCombinerKMZ.pas"/>
 			<DCCReference Include="Src\RegionProcess\Combine\u_BitmapMapCombinerPNG.pas"/>
 			<DCCReference Include="Src\RegionProcess\Combine\u_BitmapMapCombinerRAW.pas"/>
+			<DCCReference Include="Src\RegionProcess\Combine\u_BmpWriter.pas"/>
 			<DCCReference Include="Src\RegionProcess\Combine\u_CalcWFileParams.pas"/>
 			<DCCReference Include="Src\RegionProcess\Combine\u_ECWJP2Write.pas"/>
 			<DCCReference Include="Src\RegionProcess\Combine\u_ImageLineProvider.pas"/>
@@ -1417,11 +1430,15 @@
 			<DCCReference Include="Src\RegionProcess\u_RegionProcessWorker.pas"/>
 			<DCCReference Include="Src\RegionProcess\u_ZoomArrayFunc.pas"/>
 			<DCCReference Include="Src\Routing\c_PathDetalizeProvidersGUID.pas"/>
+			<DCCReference Include="Src\Routing\i_PathDetalizeConfig.pas"/>
 			<DCCReference Include="Src\Routing\i_PathDetalizeProvider.pas"/>
 			<DCCReference Include="Src\Routing\i_PathDetalizeProviderTreeEntity.pas"/>
+			<DCCReference Include="Src\Routing\u_PathDetalizeConfig.pas"/>
+			<DCCReference Include="Src\Routing\u_PathDetalizeProviderBase.pas"/>
+			<DCCReference Include="Src\Routing\u_PathDetalizeProviderOSRM.pas"/>
+			<DCCReference Include="Src\Routing\u_PathDetalizeProviderOsmScout.pas"/>
 			<DCCReference Include="Src\Routing\u_PathDetalizeProviderTreeEntity.pas"/>
 			<DCCReference Include="Src\Routing\u_PathDetalizeProviderTreeSimple.pas"/>
-			<DCCReference Include="Src\Routing\u_PathDetalizeProviderYourNavigation.pas"/>
 			<DCCReference Include="Src\SecondaryForms\fr_LonLat.pas">
 				<Form>frLonLat</Form>
 				<DesignClass>TFrame</DesignClass>
@@ -1460,6 +1477,10 @@
 			</DCCReference>
 			<DCCReference Include="Src\Settings\fr_GPSConfig.pas">
 				<Form>frGPSConfig</Form>
+				<DesignClass>TFrame</DesignClass>
+			</DCCReference>
+			<DCCReference Include="Src\Settings\fr_GeoCoderApiKey.pas">
+				<Form>frGeoCoderApiKey</Form>
 				<DesignClass>TFrame</DesignClass>
 			</DCCReference>
 			<DCCReference Include="Src\Settings\fr_GpsSatellites.pas">
@@ -1508,7 +1529,6 @@
 			<DCCReference Include="Src\System\u_LanguageManager.pas"/>
 			<DCCReference Include="Src\System\u_LanguagesEx.pas"/>
 			<DCCReference Include="Src\System\u_SystemTimeProvider.pas"/>
-			<DCCReference Include="Src\TimeZone\u_TimeZoneInfo.pas"/>
 			<DCCReference Include="Src\Terrain\External\u_ExternalTerrainAPI.pas"/>
 			<DCCReference Include="Src\Terrain\External\u_ExternalTerrainsProvider.pas"/>
 			<DCCReference Include="Src\Terrain\GoogleEarth\i_GoogleEarthTerrainTileStorage.pas"/>
@@ -1693,11 +1713,17 @@
 			<DCCReference Include="Src\TileStorage\u_TileStorageTypeList.pas"/>
 			<DCCReference Include="Src\TileStorage\u_TileStorageTypeListItem.pas"/>
 			<DCCReference Include="Src\TileStorage\u_TileStorageTypeListSimple.pas"/>
+			<DCCReference Include="Src\TimeZone\u_TimeZoneInfo.pas"/>
 			<DCCReference Include="Src\UpdateChecker\frm_UpdateChecker.pas">
 				<Form>frmUpdateChecker</Form>
 			</DCCReference>
-			<DCCReference Include="Src\UpdateChecker\i_UpdateDownloader.pas"/>
-			<DCCReference Include="Src\UpdateChecker\u_UpdateDownloader.pas"/>
+			<DCCReference Include="Src\UpdateChecker\i_UpdateProgress.pas"/>
+			<DCCReference Include="Src\UpdateChecker\t_UpdateChecker.pas"/>
+			<DCCReference Include="Src\UpdateChecker\u_UpdateChecker.pas"/>
+			<DCCReference Include="Src\UpdateChecker\u_UpdateCheckerFunc.pas"/>
+			<DCCReference Include="Src\UpdateChecker\u_UpdateCheckerThread.pas"/>
+			<DCCReference Include="Src\UpdateChecker\u_UpdateDownloaderThread.pas"/>
+			<DCCReference Include="Src\UpdateChecker\u_UpdateProgress.pas"/>
 			<DCCReference Include="Src\UrlByCoord\i_UrlByCoordProvider.pas"/>
 			<DCCReference Include="Src\UrlByCoord\u_UrlByCoordProvider.pas"/>
 			<DCCReference Include="Src\VectorLoaders\i_XmlVectorObjects.pas"/>
@@ -1765,7 +1791,6 @@
 			<DCCReference Include="Src\i_GlobalAppConfig.pas"/>
 			<DCCReference Include="Src\i_GlobalConfig.pas"/>
 			<DCCReference Include="Src\i_GlobalViewMainConfig.pas"/>
-			<DCCReference Include="Src\HashFunction\i_HashFunction.pas"/>
 			<DCCReference Include="Src\i_HashInterfaceCache.pas"/>
 			<DCCReference Include="Src\i_HtmlToHintTextConverter.pas"/>
 			<DCCReference Include="Src\i_InterfaceQueue.pas"/>
@@ -1810,9 +1835,8 @@
 			<DCCReference Include="Src\u_GlobalConfig.pas"/>
 			<DCCReference Include="Src\u_GlobalState.pas"/>
 			<DCCReference Include="Src\u_GlobalViewMainConfig.pas"/>
-			<DCCReference Include="Src\HashFunction\u_HashFunctionByImpl.pas"/>
-			<DCCReference Include="Src\HashFunction\u_HashFunctionWithCounter.pas"/>
 			<DCCReference Include="Src\u_HashInterfaceCache2Q.pas"/>
+			<DCCReference Include="Src\u_HtmlDoc.pas"/>
 			<DCCReference Include="Src\u_HtmlToHintTextConverterStuped.pas"/>
 			<DCCReference Include="Src\u_ImportFromArcGIS.pas"/>
 			<DCCReference Include="Src\u_InterfaceQueue.pas"/>
