--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -75,7 +75,6 @@
     <DCCReference Include="Src\Basic\i_FileNameIterator.pas" />
     <DCCReference Include="Src\Basic\i_GUIDListStatic.pas" />
     <DCCReference Include="Src\Basic\i_GUIDSet.pas" />
-    <DCCReference Include="Src\HashFunction\i_HashFunctionImpl.pas" />
     <DCCReference Include="Src\Basic\i_IDList.pas" />
     <DCCReference Include="Src\Basic\i_InterfaceListSimple.pas" />
     <DCCReference Include="Src\Basic\i_InterfaceListStatic.pas" />
@@ -111,8 +110,6 @@
     <DCCReference Include="Src\Basic\u_GUIDObjectSet.pas" />
     <DCCReference Include="Src\Basic\u_GUIDSet.pas" />
     <DCCReference Include="Src\Basic\u_GUIDTool.pas" />
-    <DCCReference Include="Src\HashFunction\u_HashFunctionCityHash.pas" />
-    <DCCReference Include="Src\HashFunction\u_HashFunctionCRC64.pas" />
     <DCCReference Include="Src\Basic\u_IDInterfaceList.pas" />
     <DCCReference Include="Src\Basic\u_IdListBase.pas" />
     <DCCReference Include="Src\Basic\u_InterfacedThread.pas" />
@@ -286,6 +283,7 @@
     <DCCReference Include="Src\CoordConvert\u_ProjectionTypeBase.pas" />
     <DCCReference Include="Src\CoordConvert\u_ProjectionTypeFactorySimple.pas" />
     <DCCReference Include="Src\CoordConvert\u_ProjectionTypeGELonLat.pas" />
+    <DCCReference Include="Src\CoordConvert\u_ProjectionTypeGeographic.pas" />
     <DCCReference Include="Src\CoordConvert\u_ProjectionTypeMercatorOnEllipsoid.pas" />
     <DCCReference Include="Src\CoordConvert\u_ProjectionTypeMercatorOnSphere.pas" />
     <DCCReference Include="Src\CoordRepresentation\i_CoordFromStringParser.pas" />
@@ -405,6 +403,12 @@
     <DCCReference Include="Src\GPS\u_GPSSatellitesInView.pas" />
     <DCCReference Include="Src\GPS\u_GpsSystem.pas" />
     <DCCReference Include="Src\GPS\u_GpsTrackRecorder.pas" />
+    <DCCReference Include="Src\HashFunction\i_HashFunction.pas" />
+    <DCCReference Include="Src\HashFunction\i_HashFunctionImpl.pas" />
+    <DCCReference Include="Src\HashFunction\u_HashFunctionByImpl.pas" />
+    <DCCReference Include="Src\HashFunction\u_HashFunctionCityHash.pas" />
+    <DCCReference Include="Src\HashFunction\u_HashFunctionCRC64.pas" />
+    <DCCReference Include="Src\HashFunction\u_HashFunctionWithCounter.pas" />
     <DCCReference Include="Src\ImageResampler\c_ImageResampler.pas" />
     <DCCReference Include="Src\ImageResampler\i_ImageResamplerConfig.pas" />
     <DCCReference Include="Src\ImageResampler\i_ImageResamplerFactory.pas" />
@@ -437,7 +441,6 @@
     <DCCReference Include="Src\i_GlobalAppConfig.pas" />
     <DCCReference Include="Src\i_GlobalConfig.pas" />
     <DCCReference Include="Src\i_GlobalViewMainConfig.pas" />
-    <DCCReference Include="Src\HashFunction\i_HashFunction.pas" />
     <DCCReference Include="Src\i_HashInterfaceCache.pas" />
     <DCCReference Include="Src\i_HtmlToHintTextConverter.pas" />
     <DCCReference Include="Src\i_InterfaceQueue.pas" />
@@ -1175,6 +1178,7 @@
     <DCCReference Include="Src\RegionProcess\Combine\u_BitmapMapCombinerKMZ.pas" />
     <DCCReference Include="Src\RegionProcess\Combine\u_BitmapMapCombinerPNG.pas" />
     <DCCReference Include="Src\RegionProcess\Combine\u_BitmapMapCombinerRAW.pas" />
+    <DCCReference Include="Src\RegionProcess\Combine\u_BmpWriter.pas" />
     <DCCReference Include="Src\RegionProcess\Combine\u_CalcWFileParams.pas" />
     <DCCReference Include="Src\RegionProcess\Combine\u_ECWJP2Write.pas" />
     <DCCReference Include="Src\RegionProcess\Combine\u_ImageLineProvider.pas" />
@@ -1667,8 +1671,6 @@
     <DCCReference Include="Src\u_GlobalConfig.pas" />
     <DCCReference Include="Src\u_GlobalState.pas" />
     <DCCReference Include="Src\u_GlobalViewMainConfig.pas" />
-    <DCCReference Include="Src\HashFunction\u_HashFunctionByImpl.pas" />
-    <DCCReference Include="Src\HashFunction\u_HashFunctionWithCounter.pas" />
     <DCCReference Include="Src\u_HashInterfaceCache2Q.pas" />
     <DCCReference Include="Src\u_HtmlDoc.pas" />
     <DCCReference Include="Src\u_HtmlToHintTextConverterStuped.pas" />
