--- a/Test/SASPlanetTests.dproj
+++ b/Test/SASPlanetTests.dproj
@@ -1,4 +1,5 @@
-﻿<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <ProjectGuid>{48242a36-b537-4ea6-963c-2409a3dad7ed}</ProjectGuid>
     <MainSource>SASPlanetTests.dpr</MainSource>
@@ -17,19 +18,19 @@
     <DCC_DcuOutput>..\.dcu</DCC_DcuOutput>
     <DCC_ObjOutput>..\.dcu</DCC_ObjOutput>
     <DCC_HppOutput>..\.dcu</DCC_HppOutput>
-    <DCC_UnitSearchPath>$(BDS)\Source\DUnit\src;..\Includes\;..\Includes\Fundamentals\;..\Includes\LibJpeg;..\Includes\FreeImage;..\Includes\LibPng;..\Src\;..\Src\Basic\;..\Src\Bitmap32\;..\Src\BitmapTileSaveLoad\;..\Src\ConfigData\;..\Src\CoordConvert\;..\Src\Debug\;..\Src\GeoCalc\;..\Src\Geometry\;..\Src\Performance\;..\Src\Synchronize\;..\Src\System\</DCC_UnitSearchPath>
-    <DCC_ResourcePath>$(BDS)\Source\DUnit\src;..\Includes\;..\Includes\Fundamentals\;..\Includes\LibJpeg;..\Includes\FreeImage;..\Includes\LibPng;..\Src\;..\Src\Basic\;..\Src\Bitmap32\;..\Src\BitmapTileSaveLoad\;..\Src\ConfigData\;..\Src\CoordConvert\;..\Src\Debug\;..\Src\GeoCalc\;..\Src\Geometry\;..\Src\Performance\;..\Src\Synchronize\;..\Src\System\</DCC_ResourcePath>
-    <DCC_ObjPath>$(BDS)\Source\DUnit\src;..\Includes\;..\Includes\Fundamentals\;..\Includes\LibJpeg;..\Includes\FreeImage;..\Includes\LibPng;..\Src\;..\Src\Basic\;..\Src\Bitmap32\;..\Src\BitmapTileSaveLoad\;..\Src\ConfigData\;..\Src\CoordConvert\;..\Src\Debug\;..\Src\GeoCalc\;..\Src\Geometry\;..\Src\Performance\;..\Src\Synchronize\;..\Src\System\</DCC_ObjPath>
-    <DCC_IncludePath>$(BDS)\Source\DUnit\src;..\Includes\;..\Includes\Fundamentals\;..\Includes\LibJpeg;..\Includes\FreeImage;..\Includes\LibPng;..\Src\;..\Src\Basic\;..\Src\Bitmap32\;..\Src\BitmapTileSaveLoad\;..\Src\ConfigData\;..\Src\CoordConvert\;..\Src\Debug\;..\Src\GeoCalc\;..\Src\Geometry\;..\Src\Performance\;..\Src\Synchronize\;..\Src\System\</DCC_IncludePath>
+    <DCC_UnitSearchPath>$(BDS)\Source\DUnit\src;..\Includes\;..\Includes\Fundamentals\;..\Includes\LibJpeg;..\Includes\FreeImage;..\Includes\LibPng;..\Src\;..\Src\Basic\;..\Src\Bitmap32\;..\Src\BitmapTileSaveLoad\;..\Src\ConfigData\;..\Src\CoordConvert\;..\Src\CoordRepresentation\;..\Src\Debug\;..\Src\GeoCalc\;..\Src\Geometry\;..\Src\Marker\;..\Src\MarksDb\;..\Src\MarkPicture\;..\Src\PascalScript\;..\Src\Performance\;..\Src\Synchronize\;..\Src\System\;..\Src\TileIterator\;..\Src\Vector\;..\Src\Network\;..\Src\MapVersion\;..\Src\UpdateChecker\;..\Src\HashFunction\</DCC_UnitSearchPath>
+    <DCC_ResourcePath>$(BDS)\Source\DUnit\src;..\Includes\;..\Includes\Fundamentals\;..\Includes\LibJpeg;..\Includes\FreeImage;..\Includes\LibPng;..\Src\;..\Src\Basic\;..\Src\Bitmap32\;..\Src\BitmapTileSaveLoad\;..\Src\ConfigData\;..\Src\CoordConvert\;..\Src\CoordRepresentation\;..\Src\Debug\;..\Src\GeoCalc\;..\Src\Geometry\;..\Src\Marker\;..\Src\MarksDb\;..\Src\MarkPicture\;..\Src\PascalScript\;..\Src\Performance\;..\Src\Synchronize\;..\Src\System\;..\Src\TileIterator\;..\Src\Vector\;..\Src\Network\;..\Src\MapVersion\;..\Src\UpdateChecker\;..\Src\HashFunction\</DCC_ResourcePath>
+    <DCC_ObjPath>$(BDS)\Source\DUnit\src;..\Includes\;..\Includes\Fundamentals\;..\Includes\LibJpeg;..\Includes\FreeImage;..\Includes\LibPng;..\Src\;..\Src\Basic\;..\Src\Bitmap32\;..\Src\BitmapTileSaveLoad\;..\Src\ConfigData\;..\Src\CoordConvert\;..\Src\CoordRepresentation\;..\Src\Debug\;..\Src\GeoCalc\;..\Src\Geometry\;..\Src\Marker\;..\Src\MarksDb\;..\Src\MarkPicture\;..\Src\PascalScript\;..\Src\Performance\;..\Src\Synchronize\;..\Src\System\;..\Src\TileIterator\;..\Src\Vector\;..\Src\Network\;..\Src\MapVersion\;..\Src\UpdateChecker\;..\Src\HashFunction\</DCC_ObjPath>
+    <DCC_IncludePath>$(BDS)\Source\DUnit\src;..\Includes\;..\Includes\Fundamentals\;..\Includes\LibJpeg;..\Includes\FreeImage;..\Includes\LibPng;..\Src\;..\Src\Basic\;..\Src\Bitmap32\;..\Src\BitmapTileSaveLoad\;..\Src\ConfigData\;..\Src\CoordConvert\;..\Src\CoordRepresentation\;..\Src\Debug\;..\Src\GeoCalc\;..\Src\Geometry\;..\Src\Marker\;..\Src\MarksDb\;..\Src\MarkPicture\;..\Src\PascalScript\;..\Src\Performance\;..\Src\Synchronize\;..\Src\System\;..\Src\TileIterator\;..\Src\Vector\;..\Src\Network\;..\Src\MapVersion\;..\Src\UpdateChecker\;..\Src\HashFunction\</DCC_IncludePath>
     <DCC_AssertionsAtRuntime>False</DCC_AssertionsAtRuntime>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <Version>7.0</Version>
-    <DCC_Define>DEBUG;_CONSOLE_TESTRUNNER</DCC_Define>
-    <DCC_UnitSearchPath>$(BDS)\Source\DUnit\src;..\Includes\;..\Includes\Fundamentals\;..\Includes\LibJpeg;..\Includes\FreeImage;..\Includes\LibPng;..\Src\;..\Src\Basic\;..\Src\Bitmap32\;..\Src\BitmapTileSaveLoad\;..\Src\ConfigData\;..\Src\CoordConvert\;..\Src\Debug\;..\Src\GeoCalc\;..\Src\Geometry\;..\Src\MarksDB\;..\Src\Performance\;..\Src\Synchronize\;..\Src\System\;..\Src\Vector\;..\Src\Marker\</DCC_UnitSearchPath>
-    <DCC_ResourcePath>$(BDS)\Source\DUnit\src;..\Includes\;..\Includes\Fundamentals\;..\Includes\LibJpeg;..\Includes\FreeImage;..\Includes\LibPng;..\Src\;..\Src\Basic\;..\Src\Bitmap32\;..\Src\BitmapTileSaveLoad\;..\Src\ConfigData\;..\Src\CoordConvert\;..\Src\Debug\;..\Src\GeoCalc\;..\Src\Geometry\;..\Src\MarksDB\;..\Src\Performance\;..\Src\Synchronize\;..\Src\System\;..\Src\Vector\;..\Src\Marker\</DCC_ResourcePath>
-    <DCC_ObjPath>$(BDS)\Source\DUnit\src;..\Includes\;..\Includes\Fundamentals\;..\Includes\LibJpeg;..\Includes\FreeImage;..\Includes\LibPng;..\Src\;..\Src\Basic\;..\Src\Bitmap32\;..\Src\BitmapTileSaveLoad\;..\Src\ConfigData\;..\Src\CoordConvert\;..\Src\Debug\;..\Src\GeoCalc\;..\Src\Geometry\;..\Src\MarksDB\;..\Src\Performance\;..\Src\Synchronize\;..\Src\System\;..\Src\Vector\;..\Src\Marker\</DCC_ObjPath>
-    <DCC_IncludePath>$(BDS)\Source\DUnit\src;..\Includes\;..\Includes\Fundamentals\;..\Includes\LibJpeg;..\Includes\FreeImage;..\Includes\LibPng;..\Src\;..\Src\Basic\;..\Src\Bitmap32\;..\Src\BitmapTileSaveLoad\;..\Src\ConfigData\;..\Src\CoordConvert\;..\Src\Debug\;..\Src\GeoCalc\;..\Src\Geometry\;..\Src\MarksDB\;..\Src\Performance\;..\Src\Synchronize\;..\Src\System\;..\Src\Vector\;..\Src\Marker\</DCC_IncludePath>
+    <DCC_Define>DEBUG</DCC_Define>
+    <DCC_UnitSearchPath>$(BDS)\Source\DUnit\src;..\Includes\;..\Includes\Fundamentals\;..\Includes\LibJpeg;..\Includes\FreeImage;..\Includes\LibPng;..\Src\;..\Src\Basic\;..\Src\Bitmap32\;..\Src\BitmapTileSaveLoad\;..\Src\ConfigData\;..\Src\CoordConvert\;..\Src\CoordRepresentation\;..\Src\Debug\;..\Src\GeoCalc\;..\Src\Geometry\;..\Src\Marker\;..\Src\MarksDb\;..\Src\MarkPicture\;..\Src\PascalScript\;..\Src\Performance\;..\Src\Synchronize\;..\Src\System\;..\Src\TileIterator\;..\Src\Vector\;..\Src\Network\;..\Src\MapVersion\;..\Src\UpdateChecker\;..\Src\HashFunction\</DCC_UnitSearchPath>
+    <DCC_ResourcePath>$(BDS)\Source\DUnit\src;..\Includes\;..\Includes\Fundamentals\;..\Includes\LibJpeg;..\Includes\FreeImage;..\Includes\LibPng;..\Src\;..\Src\Basic\;..\Src\Bitmap32\;..\Src\BitmapTileSaveLoad\;..\Src\ConfigData\;..\Src\CoordConvert\;..\Src\CoordRepresentation\;..\Src\Debug\;..\Src\GeoCalc\;..\Src\Geometry\;..\Src\Marker\;..\Src\MarksDb\;..\Src\MarkPicture\;..\Src\PascalScript\;..\Src\Performance\;..\Src\Synchronize\;..\Src\System\;..\Src\TileIterator\;..\Src\Vector\;..\Src\Network\;..\Src\MapVersion\;..\Src\UpdateChecker\;..\Src\HashFunction\</DCC_ResourcePath>
+    <DCC_ObjPath>$(BDS)\Source\DUnit\src;..\Includes\;..\Includes\Fundamentals\;..\Includes\LibJpeg;..\Includes\FreeImage;..\Includes\LibPng;..\Src\;..\Src\Basic\;..\Src\Bitmap32\;..\Src\BitmapTileSaveLoad\;..\Src\ConfigData\;..\Src\CoordConvert\;..\Src\CoordRepresentation\;..\Src\Debug\;..\Src\GeoCalc\;..\Src\Geometry\;..\Src\Marker\;..\Src\MarksDb\;..\Src\MarkPicture\;..\Src\PascalScript\;..\Src\Performance\;..\Src\Synchronize\;..\Src\System\;..\Src\TileIterator\;..\Src\Vector\;..\Src\Network\;..\Src\MapVersion\;..\Src\UpdateChecker\;..\Src\HashFunction\</DCC_ObjPath>
+    <DCC_IncludePath>$(BDS)\Source\DUnit\src;..\Includes\;..\Includes\Fundamentals\;..\Includes\LibJpeg;..\Includes\FreeImage;..\Includes\LibPng;..\Src\;..\Src\Basic\;..\Src\Bitmap32\;..\Src\BitmapTileSaveLoad\;..\Src\ConfigData\;..\Src\CoordConvert\;..\Src\CoordRepresentation\;..\Src\Debug\;..\Src\GeoCalc\;..\Src\Geometry\;..\Src\Marker\;..\Src\MarksDb\;..\Src\MarkPicture\;..\Src\PascalScript\;..\Src\Performance\;..\Src\Synchronize\;..\Src\System\;..\Src\TileIterator\;..\Src\Vector\;..\Src\Network\;..\Src\MapVersion\;..\Src\UpdateChecker\;..\Src\HashFunction\</DCC_IncludePath>
     <DCC_ExeOutput>..\.bin</DCC_ExeOutput>
     <DCC_DcuOutput>..\.dcu</DCC_DcuOutput>
     <DCC_ObjOutput>..\.dcu</DCC_ObjOutput>
@@ -66,10 +67,13 @@
     <DCCReference Include="u_GUIDSet_Test.pas" />
     <DCCReference Include="u_HashCacheWithQueuesAbstract_Test.pas" />
     <DCCReference Include="u_MarkCategoryListToTree_Test.pas" />
+    <DCCReference Include="u_PascalScriptUrlTemplate_Test.pas" />
     <DCCReference Include="u_PathConfig_Test.pas" />
+    <DCCReference Include="u_ProjectedPolygonWithRect_Test.pas" />
     <DCCReference Include="u_ProjectedSingleLine_Test.pas" />
     <DCCReference Include="u_RegularExpressions_Test.pas" />
     <DCCReference Include="u_SASTestCase.pas" />
+    <DCCReference Include="u_UpdateChecker_Test.pas" />
     <DCCReference Include="u_VectorItmesFactorySimple_Test.pas" />
     <DCCReference Include="u_WideStrings_Test.pas" />
   </ItemGroup>
