2377: Свой goto маркер

--- a/Resources/Common/Common.rc
+++ b/Resources/Common/Common.rc
@@ -8,3 +8,4 @@ VTUMBLER RCDATA "VTUMBLER.png"
 RED RCDATA "RED.png"
 FOUNDPNT RCDATA "FOUNDPNT.png"
 PANORAMIO RCDATA "PANORAMIO.png"
+ARROW RCDATA "ARROW.png"
