--- a/SASPlanet.104.dproj
+++ b/SASPlanet.104.dproj
@@ -2925,6 +2925,7 @@
         <DCCReference Include="Src\u_ValueToStringConverterChangeable.pas"/>
         <DCCReference Include="Src\u_ValueToStringConverterConfig.pas"/>
         <DCCReference Include="Src\u_WindowPositionConfig.pas"/>
+        <DCCReference Include="Src\MapLayers\WindowLayers\GpsTrackToolsMarker\u_MapLayerGpsTrackGoToMarker.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
